--- a/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.html
+++ b/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.html
@@ -92,6 +92,46 @@
           </div>
         </div>
       </mat-tab>
+      <mat-tab label="Acelerografos">
+        <div class="card">
+          <div class="card-header card-header-primary">
+            <h4 class="card-title">Dataloggers</h4>
+            <p class="card-category">Lista de Dataloggers</p>
+            <button mat-mini-fab color="primary" (click)="addAcelerografo()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
+          <div class="card-body">
+            <div id="typography">
+              <table mat-table [dataSource]="dataSourceDatalogger" matSort class="mat-elevation-z8">
+                <ng-container matColumnDef="nombre">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+                  <td mat-cell *matCellDef="let dataloggers"> {{dataloggers.nombre}} </td>
+                </ng-container>
+                <ng-container matColumnDef="modelo">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Modelo</th>
+                  <td mat-cell *matCellDef="let dataloggers"> {{dataloggers.modelo}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="accion">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Acción</th>
+                  <td mat-cell *matCellDef="let dataloggers">
+                    <button mat-icon-button (click)="openDialogDatalogger(dataloggers.url)">
+                      <mat-icon color="primary">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="deleteSensor(dataloggers.url)">
+                      <mat-icon color="warn">delete</mat-icon>
+                    </button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumnsSensor"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumnsSensor;"></tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </mat-tab>
     </mat-tab-group>
   </div>
 </div>
