--- a/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.html
+++ b/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.html
@@ -21,6 +21,10 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación</th>
                   <td mat-cell *matCellDef="let acelerografos"> {{acelerografos.ubicacion}} </td>
                 </ng-container>
+                <ng-container matColumnDef="sensor">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Sensor</th>
+                  <td mat-cell *matCellDef="let acelerografos"> {{acelerografos.sensor}} </td>
+                </ng-container>
                 <ng-container matColumnDef="latitud">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Latitud</th>
                   <td mat-cell *matCellDef="let acelerografos"> {{acelerografos.latitud}} </td>
@@ -32,6 +36,12 @@
                 <ng-container matColumnDef="altitud">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Altitud</th>
                   <td mat-cell *matCellDef="let acelerografos"> {{acelerografos.altitud}} </td>
+                </ng-container>
+                <ng-container matColumnDef="activo">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Activo</th>
+                  <td mat-cell *matCellDef="let acelerografos">
+                    <mat-checkbox [(ngModel)]="acelerografos.activo"></mat-checkbox>
+                  </td>
                 </ng-container>
                 <ng-container matColumnDef="accion">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Acción</th>
@@ -92,7 +102,7 @@
           </div>
         </div>
       </mat-tab>
-      <mat-tab label="Acelerografos">
+      <mat-tab label="Dataloggers">
         <div class="card">
           <div class="card-header card-header-primary">
             <h4 class="card-title">Dataloggers</h4>
@@ -112,7 +122,6 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Modelo</th>
                   <td mat-cell *matCellDef="let dataloggers"> {{dataloggers.modelo}} </td>
                 </ng-container>
-
                 <ng-container matColumnDef="accion">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Acción</th>
                   <td mat-cell *matCellDef="let dataloggers">
@@ -124,9 +133,8 @@
                     </button>
                   </td>
                 </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumnsSensor"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumnsSensor;"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumnsDatalogger"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumnsDatalogger;"></tr>
               </table>
             </div>
           </div>
