--- a/front-end/red-acelerografos/src/app/admin/dialog/edit-sensor/edit-sensor.component.html
+++ b/front-end/red-acelerografos/src/app/admin/dialog/edit-sensor/edit-sensor.component.html
@@ -1,3 +1,28 @@
-<p>
-  edit-sensor works!
-</p>
+<mat-dialog-content class="mat-typography">
+  <div class="card">
+    <div class="card-header card-header-danger">
+      <h4 class="card-title">Agregar sensor</h4>
+    </div>
+    <div class="card-body">
+      <form [formGroup]="sensorForm">
+        <div class="row">
+          <div class="col-md-12">
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Nombre" type="text" formControlName="nombre">
+            </mat-form-field>
+          </div>
+          <div class="col-md-12">
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Modelo" type="text" formControlName="modelo">
+            </mat-form-field>
+          </div>
+        </div>
+        <mat-dialog-actions align="center">
+          <button mat-raised-button mat-dialog-close class="btn btn-danger">Cancelar</button>
+          <button mat-raised-button class="btn btn-primary" [disabled]='!sensorForm.valid' [mat-dialog-close]="true" (click)="onSubmit()">Actualizar sensor</button>
+        </mat-dialog-actions>
+        <div class="clearfix"></div>
+      </form>
+    </div>
+  </div>
+</mat-dialog-content>
