--- a/front-end/red-acelerografos/src/app/admin/dialog/edit-acelerografo/edit-acelerografo.component.html
+++ b/front-end/red-acelerografos/src/app/admin/dialog/edit-acelerografo/edit-acelerografo.component.html
@@ -12,7 +12,7 @@
             </mat-form-field>
           </div>
           <div class="col-md-2">
-              <mat-checkbox  formControlName="tipo">Activo</mat-checkbox>
+              <mat-checkbox  formControlName="activo"></mat-checkbox>
           </div>
           <div class="col-md-12">
             <mat-form-field class="example-full-width">
