--- a/front-end/red-acelerografos/src/app/ui/mapa/mapa.component.html
+++ b/front-end/red-acelerografos/src/app/ui/mapa/mapa.component.html
@@ -13,6 +13,7 @@
     </agm-map>
   </div>
   <div class="col-md-2">
+    <img src="./assets/img/utpl_azul.png" alt="Logo UTPL" class="imagen mx-auto">
     <h4>Red Nacional de Acelerógrafos</h4>
     <form class="example-form">
       <mat-form-field class="example-full-width">
