--- a/front-end/red-acelerografos/src/app/ui/mapa/mapa.component.scss
+++ b/front-end/red-acelerografos/src/app/ui/mapa/mapa.component.scss
@@ -1,3 +1,11 @@
 agm-map {
   height: 50rem;
 }
+
+.imagen {
+  height: 9rem;
+  margin-bottom: 1rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
