correcion modulos y estilos

--- a/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.scss
+++ b/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.scss
@@ -5,3 +5,16 @@ table {
 th.mat-sort-header-sorted {
   color: black;
 }
+
+.fab {
+  z-index: 5;
+  position: fixed;
+  display: flex;
+  align-self: flex-end;
+  bottom: 10%;
+  margin-bottom: 68px;
+  }
+.card-header {
+  font-family: 'Ubuntu', sans-serif;
+
+}
