--- a/front-end/red-acelerografos/src/app/admin/dialog/add-acelerografo/add-acelerografo.component.html
+++ b/front-end/red-acelerografos/src/app/admin/dialog/add-acelerografo/add-acelerografo.component.html
@@ -46,7 +46,7 @@
         </div>
         <mat-dialog-actions align="center">
           <button mat-raised-button mat-dialog-close class="btn btn-danger">Cancelar</button>
-          <button mat-raised-button class="btn btn-primary" [disabled]='!acelerografoForm.valid' [mat-dialog-close]="true" (click)="onSubmit()">Actualizar Acelerografo</button>
+          <button mat-raised-button class="btn btn-primary" [disabled]='!acelerografoForm.valid' [mat-dialog-close]="true" (click)="onSubmit()">Guardar</button>
         </mat-dialog-actions>
         <div class="clearfix"></div>
       </form>
