--- a/front-end/red-acelerografos/src/app/ui/mapa/mapa.component.html
+++ b/front-end/red-acelerografos/src/app/ui/mapa/mapa.component.html
@@ -1,15 +1,18 @@
 <div class="row" *ngIf="acelerografos">
   <div class="col-md-10">
 
-    <agm-map [latitude]="lat" [longitude]="lng" [zoom]="8" >
+    <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" >
       <agm-marker *ngFor="let acelerografo of acelerografos" [latitude]="acelerografo.latitud" [longitude]="acelerografo.longitud" [iconUrl]="'http://cemos.cismid-uni.org/redacis/img/cismid.png'">
         <agm-info-window>
           <h4 class="text-center">{{acelerografo.nombre}}</h4>
           <p><strong>Ubicación: </strong>{{acelerografo.ubicacion}}</p>
           <p><strong>Altitud: </strong>{{acelerografo.altitud}}</p>
+          <p><strong>Latitud: </strong>{{acelerografo.latitud}}</p>
+          <p><strong>Longitud: </strong>{{acelerografo.longitud}}</p>
           <button mat-stroked-button color="primary" (click)="registro(acelerografo)">Registros</button>
         </agm-info-window>
       </agm-marker>
+
     </agm-map>
   </div>
   <div class="col-md-2">
@@ -30,8 +33,9 @@
       <div class="card-body">
         <p><strong>Ubicación: </strong>{{acelerografo.ubicacion}}</p>
         <p><strong>Altitud: </strong>{{acelerografo.altitud}}</p>
-        <button mat-stroked-button color="primary" (click)="registro(acelerografo)">Registros</button>
-        <button mat-stroked-button color="primary">Mapa</button>
+        <p><strong>Latitud: </strong>{{acelerografo.latitud}}</p>
+        <p><strong>Longitud: </strong>{{acelerografo.longitud}}</p>
+        <button mat-stroked-button class="boton" (click)="registro(acelerografo)">Registros</button>
       </div>
     </div>
   </div>
