--- a/front-end/red-acelerografos/src/app/ui/nav/nav.component.html
+++ b/front-end/red-acelerografos/src/app/ui/nav/nav.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" routerLink="/ui/mapa">Mapa </a>
       </li>
     </ul>
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto pr-3">
       <li class="nav-item">
         <a class="btn btn-outline-success my-2 my-sm-0" routerLink="/ui/login">Login</a>
       </li>
