--- a/front-end/red-acelerografos/src/app/ui/nav/nav.component.scss
+++ b/front-end/red-acelerografos/src/app/ui/nav/nav.component.scss
@@ -1,8 +1,8 @@
 .navbar-brand{
   font-family: 'Montserrat', sans-serif;
   font-size: 1.3rem;
-  color: #3700B3;
+  color: #1565C0;
 }
 .navbar-brand:hover{
-  color: #03DAC6;
+  color: #64B5F6;
 }
