--- a/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.html
+++ b/front-end/red-acelerografos/src/app/admin/acelerometros/acelerometros.component.html
@@ -3,12 +3,14 @@
     <mat-tab-group>
       <mat-tab label="Acelerografos">
         <div class="card">
-          <div class="card-header card-header-primary">
+          <div class="fab">
+            <a mat-fab color="primary" style="margin-right : 14px;" (click)="addAcelerografo()">
+              <mat-icon>add</mat-icon>
+            </a>
+          </div>
+          <div class="card-header card-header-danger">
             <h4 class="card-title">Acelerografos</h4>
             <p class="card-category">Lista de Acelerografos</p>
-            <button mat-mini-fab color="primary" (click)="addAcelerografo()">
-              <mat-icon>add</mat-icon>
-            </button>
           </div>
           <div class="card-body">
             <div id="typography">
@@ -63,12 +65,14 @@
       </mat-tab>
       <mat-tab label="Sensores">
         <div class="card mt-3">
-          <div class="card-header card-header-primary">
+          <div class="fab">
+            <a mat-fab color="primary" style="margin-right : 14px;" (click)="addSensor()">
+              <mat-icon>add</mat-icon>
+            </a>
+          </div>
+          <div class="card-header card-header-danger">
             <h4 class="card-title">Sensores</h4>
             <p class="card-category">Lista de Sensores</p>
-            <button mat-mini-fab color="primary" (click)="addSensor()">
-              <mat-icon>add</mat-icon>
-            </button>
           </div>
           <div class="card-body">
             <div id="typography">
@@ -104,12 +108,14 @@
       </mat-tab>
       <mat-tab label="Dataloggers">
         <div class="card">
-          <div class="card-header card-header-primary">
+          <div class="fab">
+            <a mat-fab color="primary" style="margin-right : 14px;" (click)="addAcelerografo()">
+              <mat-icon>add</mat-icon>
+            </a>
+          </div>
+          <div class="card-header card-header-danger">
             <h4 class="card-title">Dataloggers</h4>
             <p class="card-category">Lista de Dataloggers</p>
-            <button mat-mini-fab color="primary" (click)="addAcelerografo()">
-              <mat-icon>add</mat-icon>
-            </button>
           </div>
           <div class="card-body">
             <div id="typography">
